# bicycle_sim

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
config/: bi_controllers.yaml  bicycle_controllers.yaml
include/bicycle_sim/: note.txt
launch/: gazebo.launch.py  gazebo_rviz.launch.py  gz.launch.py  rviz.launch.py
meshes/: lidar.stl  link_crank_arms.stl  link_fork.stl  link_frame.stl  link_front_wheel.stl  link_handlebar.stl  link_head_tube.stl  link_left_pedal_axis.stl  link_left_support_wheel.stl  link_left_support_wheel_axis.stl  link_right_pedal.stl  link_right_pedal_axis.stl  link_right_support_leg.stl  link_seat_post.stl
rviz/: rviz_config.rviz
src/: note.txt
urdf/: bicycle.urdf.xacro  bicycle_joints.xacro  bicycle_links.xacro  camera.xacro  elements.xacro  gazebo.xacro  gazebo_config.xacro  gazebo_control.xacro  gazebo_material.xacro  gazebo_ros.xacro  inertial.xacro  joints.xacro  joints_type.xacro  lidar.xacro  links.xacro  material.xacro  properties.xacro  property.xacro  ros2_control.xacro
worlds/: obstacles.world  obstacles_world.world
worlds/brick_wall/: model.config  model.sdf
